# Out-of-Variable-Generalization

./: .gitignore  README.md  ablation_studies.py  ablation_studies_w_heavy_tailed.py  estimators.py  mypy.ini  predictors.py  pyproject.toml  quanititative_result.py  real_world_dataset.py  requirements.txt  zero_shot_learning.ipynb
data/: dataset.py
experiments/: ablation_studies.py  ablation_studies_w_heavy_tailed.py  ablation_studies_with_heavy_tailed.py  ablation_studies_with_noise.py  configs.yml  configuration.py  plot_utils.py  quantitative_result.py  real_world_dataset.py  zero_shot_learning.ipynb
experiments/Nonlinear/: data_2.hdf5  data_3.hdf5  data_4.hdf5
experiments/Polynomial/: data_4.hdf5
experiments/ablation/: mean_general_w_ht.npy  mean_linear_w_ht.npy  mean_table_noises.npy
experiments/ablation/general/: summary.npy
experiments/ablation/linear/: results.npy  summary.npy
experiments/data/: generate_data.py
experiments/original/Nonlinear/: data_0.hdf5  data_1.hdf5
experiments/original/Polynomial/: data_0.hdf5  data_1.hdf5  data_2.hdf5  data_3.hdf5
experiments/original/ablation/: mean_general.npy  mean_linear.npy
experiments/original/ablation/general/: results.npy
experiments/original/ablation/linear/: results.npy  summary.npy
ovg/: estimators.py  evaluation.py  predictors.py
ovg_experiments/: ablation_common.py  datagen_settings.py  generate_data.py  simulated_data.py
