[project]
name = "ovg"
version = "0.1.0"
description = "Out-of-Variable-Generalization."
readme = "README.md"
authors = [
    { name = "Siyuan Guo", email = "siyuan.guo@tuebingen.mpg.de" },
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
]


dependencies = [
    "tomli-w",
    "h5py==3.8.0",
    "matplotlib==3.6.3",
    "scikit_learn==1.2.1",
    "scipy==1.10.1",
    "seaborn==0.13.2",
    "statsmodels==0.13.5",
    "numpy==1.24.1",
    "pandas==1.5.3",
    "torch==1.13.1",
    "tabulate==0.9.0",
]

[project.urls]
Homepage = "https://arxiv.org/abs/2304.07896"
Source = "https://github.com/syguo96/Out-of-Variable-Generalization"


[tool.setuptools]
packages = ["ovg","ovg_experiments"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
